--- a/profile/index.html
+++ b/profile/index.html
@@ -11,6 +11,9 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 	<body>
+		<script src="sigma.js"></script>
+		<script src="plugins/sigma.parsers.json.min.js"></script>
+		<script src="render.js"></script>
 
 		<!-- Wrapper -->
 			<div id="wrapper">
@@ -53,7 +56,8 @@
 							<section id="first" class="main special">
 								<header class="major">
 									<h2>Your Giving Relationships</h2>
-                                    <p> A graph will go here </p>
+									<div id="container"></div>
+
 								</header>
                         <!--        <ul class="features">
 									<li>
@@ -70,7 +74,7 @@
 										<h3>Dolor nullam</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
-								</ul>                                        
+								</ul>
 								<footer class="major">
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn More</a></li>
@@ -106,7 +110,7 @@
 										<strong>1,024</strong> Nullam
 									</li>
 								</ul>
-								
+
                         <!--        <p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
                         -->
 								<footer class="major">
