--- a/profile/index.html
+++ b/profile/index.html
@@ -89,7 +89,7 @@
 								<header class="major">
 									<h2>Your Giving History</h2>
 								</header>
-								<ul class="statistics">
+								<!-- <ul class="statistics">
 									<li class="style1">
 										<span class="icon fa-code-fork"></span>
 										<strong>5,120</strong> Etiam
@@ -110,15 +110,16 @@
 										<span class="icon fa-diamond"></span>
 										<strong>1,024</strong> Nullam
 									</li>
-								</ul>
+								</ul> -->
+								<img src="images/placeholder-history.png" alt="Your giving history" id="placeholder"/>
 
                         <!--        <p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
                         -->
-								<footer class="major">
+								<!-- <footer class="major">
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn More</a></li>
 									</ul>
-								</footer>
+								</footer> -->
 							</section>
 
 						<!-- Get Started -->
