--- a/profile/index.html
+++ b/profile/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Your Giving Side Profile</title>
+		<title>Thea's Giving Side Profile</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -29,7 +29,6 @@
 							<li><a href="#intro" class="active">Profile</a></li>
 							<li><a href="#first">Graph</a></li>
 							<li><a href="#second">History</a></li>
-							<li><a href="#cta">Posts</a></li>
 						</ul>
 					</nav>
 
@@ -54,7 +53,7 @@
 						<!-- First Section -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Your Giving Relationships</h2>
+									<h2>Thea's Giving Side</h2>
 
 									<div id="container"></div>
 
@@ -86,7 +85,7 @@
 						<!-- Second Section -->
 							<section id="second" class="main special">
 								<header class="major">
-									<h2>Your Giving History</h2>
+									<h2>Thea's Giving History</h2>
 								</header>
 								<!-- <ul class="statistics">
 									<li class="style1">
@@ -120,8 +119,7 @@
 									</ul>
 								</footer> -->
 							</section>
-
-						<!-- Get Started -->
+<!--
 							<section id="cta" class="main special">
 								<header class="major">
 									<h2>Your Posts</h2>
@@ -134,7 +132,7 @@
 									</ul>
 								</footer>
 							</section>
-
+-->
 					</div>
 
 				<!-- Footer -->
