--- a/profile/index.html
+++ b/profile/index.html
@@ -9,6 +9,8 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<script src="assets/js/sweetalert.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="assets/css/sweetalert.css">
 	</head>
 	<body>
 		<script src="sigma.js"></script>
