--- a/profile/index.html
+++ b/profile/index.html
@@ -48,7 +48,7 @@
                                         <p> "The moment of change is the only poem." -Adrienne Rich </p>
                                         <p> Passionate about <b>Economic Justice</b> and <b> Progressive Tax Policy</b></p>
 									</div>
-									<span class="image"><img src="thea_photo.jpg" alt="" /></span>
+									<span class="image"><img src="images/thea_photo.jpg" alt="" /></span>
 								</div>
 							</section>
 
