commented out profile

--- a/profile/index.html
+++ b/profile/index.html
@@ -25,10 +25,10 @@
 						<h1> <FONT color = "black"> Giving Side </FONT></h1>
 					</header>
 
-				<!-- Nav -->
+<!--Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#intro" class="active">Profile</a></li>
+<!--							<li><a href="#intro" class="active">Profile</a></li>-->
 							<li><a href="#first">Graph</a></li>
 							<li><a href="#second">History</a></li>
 						</ul>
@@ -37,20 +37,20 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Introduction -->
+						<!-- Profile info - commented out for now -->
+<!--
 							<section id="intro" class="main">
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
 											<h2>Thea Rossman</h2>
 										</header>
-										<p> Stanford, CA | 19 years old</p>
-                                        <p> "The moment of change is the only poem." -Adrienne Rich </p>
                                         <p> Passionate about <b>Economic Justice</b> and <b> Progressive Tax Policy</b></p>
 									</div>
 									<span class="image"><img src="images/thea_photo.jpg" alt="" /></span>
 								</div>
 							</section>
+-->
 
 						<!-- First Section -->
 							<section id="first" class="main special">
