placeholder card implementation

--- a/profile/index.html
+++ b/profile/index.html
@@ -11,6 +11,13 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<script src="assets/js/sweetalert.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="assets/css/sweetalert.css">
+		<!--Import Google Icon Font-->
+      <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <!--Import materialize.css-->
+      <link type="text/css" rel="stylesheet" href="assets/css/materialize.css"  media="screen,projection"/>
+
+      <!--Let browser know website is optimized for mobile-->
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	</head>
 	<body>
 		<script src="sigma.js"></script>
@@ -58,6 +65,22 @@
 									<h2>Thea's Giving Side</h2>
 
 									<div id="container"></div>
+
+									<div id="cards-container">
+										<div class="card small">
+					            <div class="card-image">
+					              <img src="images/thea_photo.jpg">
+					              <span class="card-title">Card Title</span>
+					            </div>
+					            <div class="card-content">
+					              <p>I am a very simple card. I am good at containing small bits of information.
+					              I am convenient because I require little markup to use effectively.</p>
+					            </div>
+					            <div class="card-action">
+					              <a href="#">This is a link</a>
+					            </div>
+					          </div>
+									</div>
 
 								</header>
                         <!--        <ul class="features">
@@ -172,6 +195,7 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
+      <script type="text/javascript" src="js/materialize.min.js"></script>
 
 	</body>
 </html>
