--- a/profile/index.html
+++ b/profile/index.html
@@ -20,9 +20,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	</head>
 	<body>
-		<script src="sigma.js"></script>
-		<script src="plugins/sigma.parsers.json.min.js"></script>
-		<script src="render.js"></script>
+
 
 		<!-- Wrapper -->
 			<div id="wrapper">
@@ -67,19 +65,52 @@
 									<div id="container"></div>
 
 									<div id="cards-container">
+
 										<div class="card small">
 					            <div class="card-image">
 					              <img src="images/thea_photo.jpg">
-					              <span class="card-title">Card Title</span>
+					              <span class="card-title">Nonprofit title</span>
 					            </div>
 					            <div class="card-content">
 					              <p>I am a very simple card. I am good at containing small bits of information.
 					              I am convenient because I require little markup to use effectively.</p>
 					            </div>
 					            <div class="card-action">
-					              <a href="#">This is a link</a>
+					              <a href="#">Visit site</a>
 					            </div>
 					          </div>
+
+
+										<div class="card small">
+					            <div class="card-image">
+					              <img src="images/thea_photo.jpg">
+					              <span class="card-title">Nonprofit title</span>
+					            </div>
+					            <div class="card-content">
+					              <p>I am a very simple card. I am good at containing small bits of information.
+					              I am convenient because I require little markup to use effectively.</p>
+					            </div>
+					            <div class="card-action">
+					              <a href="#">Visit site</a>
+					            </div>
+					          </div>
+
+
+										<div class="card small">
+											<div class="card-image">
+												<img src="images/thea_photo.jpg">
+												<span class="card-title">Nonprofit title</span>
+											</div>
+											<div class="card-content">
+												<p>I am a very simple card. I am good at containing small bits of information.
+												I am convenient because I require little markup to use effectively.</p>
+											</div>
+											<div class="card-action">
+												<a href="#">Visit site</a>
+											</div>
+										</div>
+
+
 									</div>
 
 								</header>
@@ -189,13 +220,15 @@
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
+			<script src="sigma.js"></script>
+			<script src="plugins/sigma.parsers.json.min.js"></script>
+			<script src="render.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
-      <script type="text/javascript" src="js/materialize.min.js"></script>
 
 	</body>
 </html>
