--- a/profile/index.html
+++ b/profile/index.html
@@ -66,7 +66,7 @@
 
 									<div id="cards-container">
 
-										<div class="card small">
+										<!-- <div class="card small">
 					            <div class="card-image">
 					              <img src="images/thea_photo.jpg">
 					              <span class="card-title">Nonprofit title</span>
@@ -108,7 +108,7 @@
 											<div class="card-action">
 												<a href="#">Visit site</a>
 											</div>
-										</div>
+										</div> -->
 
 
 									</div>
