--- a/profile/index.html
+++ b/profile/index.html
@@ -62,6 +62,13 @@
 								<header class="major">
 									<h2>Thea's Giving Side</h2>
 
+									<nav id="nav2">
+										<ul>
+											<li><a href="#" onClick="viewGraph()">View Graph</a></li>
+											<li><a href="#" onClick="viewCards()">View Cards</a></li>
+										</ul>
+									</nav>
+
 									<div id="container"></div>
 
 									<div id="cards-container">
