--- a/profile/index.html
+++ b/profile/index.html
@@ -43,7 +43,7 @@
 					<div id="main">
 
 						<!-- Profile info - commented out for now -->
-<!--
+<!-- 
 							<section id="intro" class="main">
 								<div class="spotlight">
 									<div class="content">
@@ -54,8 +54,8 @@
 									</div>
 									<span class="image"><img src="images/thea_photo.jpg" alt="" /></span>
 								</div>
-							</section>
--->
+							</section> -->
+
 
 						<!-- First Section -->
 							<section id="first" class="main special">
@@ -64,8 +64,8 @@
 
 									<nav id="nav2">
 										<ul>
-											<li><a href="#" onClick="viewGraph()">View Graph</a></li>
-											<li><a href="#" onClick="viewCards()">View Cards</a></li>
+											<li><a href="javascript:void(0)" onClick="viewGraph()">View Graph</a></li>
+											<li><a href="javascript:void(0)" onClick="viewCards()">View Cards</a></li>
 										</ul>
 									</nav>
 
