--- a/profile/index.html
+++ b/profile/index.html
@@ -43,24 +43,28 @@
 					<div id="main">
 
 						<!-- Profile info - commented out for now -->
-<!-- 
-							<section id="intro" class="main">
-								<div class="spotlight">
-									<div class="content">
-										<header class="major">
-											<h2>Thea Rossman</h2>
-										</header>
-                                        <p> Passionate about <b>Economic Justice</b> and <b> Progressive Tax Policy</b></p>
-									</div>
-									<span class="image"><img src="images/thea_photo.jpg" alt="" /></span>
-								</div>
+
+							<!-- <section id="intro" class="main">
+
 							</section> -->
 
 
 						<!-- First Section -->
 							<section id="first" class="main special">
-								<header class="major">
-									<h2>Thea's Giving Side</h2>
+								<div class="spotlight">
+									<span class="image"><img src="images/thea_photo.jpg" alt="" /></span>
+									<div class="content">
+
+										<header>
+											<h2>Thea Rossman</h2>
+										</header>
+                                        <p> Passionate about <b>Economic Justice</b> and <b> Progressive Tax Policy</b></p>
+									</div>
+
+
+								</div>
+								<!-- <header class="major"> -->
+									<!-- <h2></h2> -->
 
 									<nav id="nav2">
 										<ul>
@@ -120,7 +124,7 @@
 
 									</div>
 
-								</header>
+								<!-- </header> -->
                         <!--        <ul class="features">
 									<li>
 										<span class="icon major style1 fa-code"></span>
