removed tabs from top of profile

--- a/profile/index.html
+++ b/profile/index.html
@@ -34,8 +34,8 @@
 					<nav id="nav">
 						<ul>
 <!--							<li><a href="#intro" class="active">Profile</a></li>-->
-							<li><a href="#first">Graph</a></li>
-							<li><a href="#second">History</a></li>
+							<!-- <li><a href="#first">Graph</a></li>
+							<li><a href="#second">History</a></li> -->
 						</ul>
 					</nav>
 
