Made toggle more user-friendly and made design more responsive

--- a/profile/index.html
+++ b/profile/index.html
@@ -124,8 +124,7 @@
 
 									<nav id="nav2">
 										<ul>
-											<li><a href="javascript:void(0)" onClick="viewGraph()">View Graph</a></li>
-											<li><a href="javascript:void(0)" onClick="viewCards()">View Cards</a></li>
+											<li><a href="javascript:void(0)" onClick="toggleView()" id="toggle" class="graph-view">Switch to Card View</a></li>
 										</ul>
 									</nav>
 
